<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">
    <string name="basic">Basic</string>
    <string name="error">Error</string>
    <string name="warn">Warning</string>
    <string name="success">Success</string>
    <string name="fail">Failed</string>
    <string name="custom">Custom</string>
    <string name="app_name">Alert</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
</resources>